[package]
name = "box-large-array"
version = "0.1.0"
edition = "2018"
license = "MIT/Apache-2.0"
authors = ["mexus < null@mexus.xyz >"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_xorshift = "0.3.0"
rand_xoshiro = "0.6.0"

argh = "0.1.6"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "compare"
harness = false
